# micropip

./: .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  COMPATIBILITY.md  MANIFEST.in  README.md  conftest.py  pyproject.toml
.github/workflows/: devpi-build-docker.yml  main.yml  release.yml  remote_package_index_test.yml  remote_test.yml
devpi/: .gitignore  Dockerfile  docker-compose.yml  entrypoint.sh  nginx.conf  packages.txt  run.sh
devpi/plugins/devpi-json-info/: README.md  devpi_json_info.py  setup.py
devpi/test-packages/test_dummy/: pyproject.toml
docs/: conf.py  index.rst  requirements-doc.txt
docs/project/: api.md  micropip-in-other-projects.md  usage.md
micropip/: __init__.py  _cached_version.py  _compat.py  _compat_in_pyodide.py  _compat_not_in_pyodide.py  _importlib_helpers.py  _micropip.py  _mock_package.py  _simpleapi.py  _uninstall.py  _utils.py  constants.py  errors.py  freeze.py  install.py  list.py  logging.py  manager.py  metadata.py  mock_package.py  package.py  package_index.py  package_manager.py  repository.py  transaction.py  types.py  uninstall.py  wheelinfo.py
micropip/_commands/: check_package_dependencies.py  freeze.py  index_urls.py  install.py  list.py  mock_package.py  uninstall.py
micropip/_compat/: __init__.py  _compat_in_pyodide.py  _compat_not_in_pyodide.py  compatibility_layer.py
micropip/_vendored/: __init__.py
micropip/_vendored/mousebender/: simple.py
micropip/commands/: install.py  uninstall.py
tests/: conftest.py  test_cached_version.py  test_compat.py  test_devpi.py  test_freeze.py  test_install.py  test_list.py  test_logging.py  test_manager.py  test_metadata.py  test_micropip.py  test_mock.py  test_package_index.py  test_package_manager.py  test_remote_indexes.py  test_repository.py  test_simpleapi.py  test_transaction.py  test_uninstall.py  test_utils.py  test_wheelinfo.py
tests/integration/: test_integration.py  test_remote_indexes.py
tests/test_data/pypi_response/: README.md  black_json.json  black_simple.html  black_simple.json  fake-pkg-micropip-test_json.json  fake-pkg-micropip-test_simple.html  fake-pkg-micropip-test_simple.json  gen_responses.sh  numpy_json.json  numpy_simple.html  numpy_simple.json  pypi_response_black.html  pypi_response_black.json  pypi_response_pytest.html  pypi_response_pytest.json  pypi_response_snowballstemmer.html  pypi_response_snowballstemmer.json  pytest_json.json  pytest_simple.html  pytest_simple.json  pytz_json.json  pytz_simple.html  pytz_simple.json  relative-urls-test_simple.html  snowballstemmer_json.json  snowballstemmer_simple.html  snowballstemmer_simple.json  xo-gd_json.json  xo-gd_simple.html  xo-gd_simple.json
tests/test_data/test_wheel_uninstall/: README.md  pyproject.toml
tests/test_data/test_wheel_uninstall/deep/data/: data.txt
tests/test_data/wheel/: blue-0.9.0-py3-none-any.whl  blue-0.9.1-py3-none-any.whl  mccabe-0.7.0-py2.py3-none-any.whl  pytest-7.2.2-py3-none-any.whl  test_wheel_uninstall-1.0.0-py3-none-any.whl
